fixed align

--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,8 @@ p {
   cursor: pointer;
   align-content: center;  
   position: relative;
-  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: fit-content;
 }
 
 .toggler-wrapper input[type="checkbox"] {
